Made CLI modular and compile with jlink.
Created patched-jars projects for jars that are not modularized yet.