@@ -6,6 +6,7 @@ plugins {
     id 'maven-publish'
     id 'application'
     id 'signing'
+    id 'org.graalvm.buildtools.native' version '0.9.6'
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -21,10 +22,16 @@ final generatedJavaSources = "$buildDir/java-generated-sources"
 
 sourceSets.main.java.srcDir generatedJavaSources
 
+configurations {
+    patchedJar
+}
+
 dependencies {
     implementation project(':rawhttp-core')
     implementation project(':rawhttp-cookies')
     implementation project(':rawhttp-req-in-edit')
+    patchedJar project(':patched-jars:icu4j')
+    patchedJar project(':patched-jars:mustache')
     compileOnly 'org.jetbrains:annotations:22.0.0'
     testImplementation 'junit:junit:4.12'
 }
@@ -36,45 +43,6 @@ jar {
                 'Implementation-Vendor': 'Renato Athaydes',
                 'Main-Class': 'rawhttp.cli.Main'
     }
-}
-
-task createClasspathDir(type: Copy) {
-    from configurations.runtimeClasspath
-    into(["$buildDir", "classpath"].join(File.separator))
-}
-
-task nativeExec(type: Exec) {
-    dependsOn createClasspathDir, jar
-    String nativeImageExec
-    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-        finalizedBy 'zipNativeExec'
-        nativeImageExec = 'native-image.cmd'
-        outputs.file(["$buildDir", "rawhttp.exe"].join(File.separator))
-    } else {
-        finalizedBy 'tarNativeExec'
-        nativeImageExec = 'native-image'
-        outputs.file(["$buildDir", "rawhttp"].join(File.separator))
-    }
-
-    // native-image --language:js --enable-https -cp "build/classpath/*" -jar build/libs/rawhttp-cli-1.3.2.jar
-    commandLine nativeImageExec, '--language:js', '--enable-https',
-            '-cp', '"' + ["$buildDir", 'classpath', '*'].join(File.separator) + '"',
-            '-jar', jar.archiveFile.get(),
-            outputs.files.first().path
-    workingDir projectDir
-}
-
-task tarNativeExec(type: Tar) {
-    archiveFileName = "rawhttp.tar.gz"
-    compression = Compression.GZIP
-    destinationDirectory = layout.buildDirectory
-    from nativeExec
-}
-
-task zipNativeExec(type: Zip) {
-    archiveFileName = "rawhttp.zip"
-    destinationDirectory = layout.buildDirectory
-    from nativeExec
 }
 
 task fatJar(type: Jar, group: 'build') {
@@ -121,6 +89,73 @@ task generateJavaSources(
 }
 
 compileJava.dependsOn generateJavaSources
+
+def libs = "${buildDir}/libs"
+def image = "${buildDir}/image"
+
+task deps( type: Copy ) {
+    from configurations.runtimeClasspath, {
+        exclude 'mustache-*', 'icu4j-*'
+    }
+    from configurations.patchedJar
+    into libs
+}
+
+task jlink( type: Exec ) {
+    dependsOn jar, deps
+//    finalizedBy copyShellScriptToImage, project( ':splash-maker' ).tasks.withType( JavaExec )
+    inputs.files( sourceSets*.allSource )
+    outputs.dir( image )
+    def options = [
+            '--module-path', libs,
+            '--vm=server', // options: client|server|minimal|all
+            '--add-modules', 'java.base,jdk.crypto.ec,' +
+                    'org.graalvm.sdk,org.graalvm.truffle,org.graalvm.js,org.webjars.mustache,' +
+                    'rawhttp.req_in_edit,rawhttp.core,rawhttp.cookies,rawhttp.cli',
+            '--output', image,
+    //        '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'
+    ]
+    def jlink = System.getProperty( 'java.home' ) + '/bin/jlink'
+    commandLine( [ jlink ] + options )
+    doFirst { new File( image ).deleteDir() }
+}
+
+task packageImage( type: Zip ) {
+    outputs.upToDateWhen { false }
+    dependsOn jlink
+    from image
+    into "rawhttp"
+    include '**/*'
+    archiveName "rawhttp-${project.version}.zip"
+    destinationDir buildDir
+}
+
+task jpackage( type: Exec ) {
+    dependsOn jlink
+    def osOptions = Os.isFamily( Os.FAMILY_WINDOWS )
+            ? [ '--win-per-user-install',
+                '--win-dir-chooser',
+                '--icon', 'site/source/static/sam.ico' ]
+            : Os.isFamily( Os.FAMILY_MAC )
+            ? [
+            '--icon', 'site/source/static/sam.ico' ]
+            : [ '--linux-menu-group', 'programming',
+                '--linux-deb-maintainer', 'renato@athaydes.com',
+                '--linux-rpm-license-type', 'GPLv3',
+                '--linux-shortcut' ]
+    def options = osOptions + [
+            '--name', 'rawhttp',
+            '--app-image', image,
+            '--app-version', project.version,
+            '--copyright', 'Copyright 2015-2021 Renato Athaydes',
+            '--description', project.description,
+            '--type', 'deb',
+            '--vendor', 'Renato Athaydes',
+            '--license-file', 'LICENSE',
+            '--dest', buildDir ]
+    def jpackage = System.getProperty( 'java.home' ) + '/bin/jpackage'
+    commandLine( [ jpackage ] + options )
+}
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     from sourceSets.main.allSource
